--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 html, body {
-    min-height: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
     font-family: Roboto, Arial, sans-serif;
@@ -11,7 +11,7 @@ html, body {
     text-align: center;
     margin: 0 0 10px;
     font-weight: 400;
-    color: #1c87c9;
+    color: #00425a;
   }
   
   p {
@@ -20,18 +20,18 @@ html, body {
   
   .main-block {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background: #1c87c9;
+    height: 100%;
+    background: #181823;
   }
   
   form {
     padding: 25px;
-    margin: 25px;
     box-shadow: 0 2px 5px #f5f5f5; 
-    background: #f5f5f5; 
+    background: #f5f5f5;
+    max-width: 720px;
+    width: 100% 
   }
   
   .fas {
@@ -64,7 +64,7 @@ html, body {
     width: 100%;
     padding: 10px;
     border: none;
-    background: #1c87c9; 
+    background: #181823; 
     font-size: 16px;
     font-weight: 400;
     color: #fff;
