--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,111 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Estilos del header */
+
+header {
+
+  background-image: url("https://images.unsplash.com/photo-1581078426770-6d336e5de7bf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
+  background-size: cover;
+  background-position: center;
+  padding: 50px;
+
+}
+
+header h1 {
+  text-align: left;
+  text-decoration: none;
+  font-weight: bold;
+  color: #eff5f5;
+  text-shadow: 1px 1px 1px rgb(0, 0, 0);
+}
+
+/* Estilos del navbar */
 nav ul {
-    list-style: none;
-    display: flex;
-  }
-  
-  nav li {
-    margin-right: 0px;
-  }
-  
-  nav a {
-    text-decoration: none;
-    font-weight: bold;
-    color: #333;
-    transition: font-size 0.3s;
-  }
-  
-  nav a:hover {
-    font-size: 18px;
-  }
-  
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding: 30px;
+}
+
+nav li {
+  margin-right: 30px;
+}
+
+nav a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #333;
+  transition: font-size 0.3s;
+}
+
+nav a:hover {
+  font-size: 18px;
+}
+
+/* estilos de infor*/
+.quienes {
+  padding: 5px;
+  margin-bottom: 10px;
+
+}
+.elegirnos{
+  padding: 5px;
+  margin-bottom: 10px;
+}
+.propuesta {
+  padding: 5px;
+  margin-bottom: 10px;
+}
+.noticias {
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+/* estilos del footer*/
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  margin: auto;
+}
+
+
+#Redes {
+  color: #00425a;
+  font-size: 24px;
+}
+
+#direccion {
+  color: #00425a;
+  font-size: 24px;
+}
+
+#contactos {
+  color: #00425a;
+  font-size: 24px;
+}
+
+.autor {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  color: #eff5f5;
+  background-color: #181823;
+  box-sizing: unset;
+  font-size: var(--font-size-small);
+  font-weight: 400;
+  grid-column-start: 1;
+  grid-column-end: 21;
+  grid-row-start: 14;
+  grid-row-end: 15;
+  height: 20px;
+  padding: 10px 0px;
+  text-align-last: center;
+  width: 100%;
+}
