--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+body {
+  max-width: none;
+  width: 100%;
+  margin: 0;
+  min-width: 320px;
+}
 /* Estilos del header */
 
 header {
