--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  max-width: none;
+  max-width: 100%;
   width: 100%;
   margin: 0;
   min-width: 320px;
@@ -20,7 +20,6 @@ header {
   padding: 50px;
 
 }
-
 header h1 {
   text-align: left;
   text-decoration: none;
@@ -34,11 +33,13 @@ nav ul {
   list-style: none;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 30px;
+  width: 100%;
 }
 
 nav li {
-  margin-right: 30px;
+  margin-right: 15px;
 }
 
 nav a {
@@ -98,13 +99,13 @@ footer {
 }
 
 .autor {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   color: #eff5f5;
   background-color: #181823;
   box-sizing: unset;
-  font-size: var(--font-size-small);
+  font-size-adjust: none;
   font-weight: 400;
   grid-column-start: 1;
   grid-column-end: 21;
@@ -112,6 +113,6 @@ footer {
   grid-row-end: 15;
   height: 20px;
   padding: 10px 0px;
-  text-align-last: center;
+  text-align: center;
   width: 100%;
 }
