--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,101 +1,47 @@
-html, body {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    font-family: Roboto, Arial, sans-serif;
-    font-size: 14px;
-    color: #666;
-  }
-  
-  h1 {
-    text-align: center;
-    margin: 0 0 10px;
-    font-weight: 400;
-    color: #00425a;
-  }
-  
-  p {
-    margin: 0 0 5px;
-  }
-  
-  .main-block {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    background: #181823;
-  }
-  
-  form {
-    padding: 25px;
-    box-shadow: 0 2px 5px #f5f5f5; 
-    background: #f5f5f5;
-    max-width: 720px;
-    width: 100% 
-  }
-  
-  .fas {
-    margin: 25px 10px 0;
-    font-size: 72px;
-    color: #fff;
-  }
-  
-  .fa-envelope {
-    transform: rotate(-20deg);
-  }
-  
-  .fa-at, .fa-mail-bulk {
-    transform: rotate(10deg);
-  }
-  
-  input, textarea {
-    width: calc(100% - 18px);
-    padding: 8px;
-    margin-bottom: 20px;
-    border: 1px solid #1c87c9;
-    outline: none;
-  }
-  
-  input::placeholder {
-    color: #666;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    background: #181823; 
-    font-size: 16px;
-    font-weight: 400;
-    color: #fff;
-  }
-  
-  button:hover {
-    background: #2371a0;
-  }
-  
-  @media (min-width: 568px) {
-    .main-block {
-      flex-direction: row;
-    }
-    
-    .left-part, form {
-      width: 50%;
-    }
-    
-    .fa-envelope {
-      margin-top: 0;
-      margin-left: 20%;
-    }
-    
-    .fa-at {
-      margin-top: -10%;
-      margin-left: 65%;
-    }
-    
-    .fa-mail-bulk {
-      margin-top: 2%;
-      margin-left: 28%;
-    }
-  }
-  
+body {
+  margin: 0; /* Elimina los márgenes predeterminados del body */
+  display: flex; /* Convierte el body en un contenedor flexible */
+  justify-content: center; /* Centra horizontalmente el contenido */
+  align-items: center; /* Centra verticalmente el contenido */
+  background-color:#181823 ;
+  height: 100vh; /* Establece la altura del body al 100% del viewport para centrar el contenido verticalmente */
+}
+
+.main-block {
+  background: #1f8a70;
+  padding: 60px;
+  width: 400px; /* Establece el ancho del formulario */
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.left-part {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.left-part i {
+  font-size: 30px;
+  margin: 0 10px;
+}
+
+h1 {
+  margin-bottom: 20px;
+}
+
+.info input,
+.info textarea {
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 2px solid #ccc;
+}
+
+button {
+  background: #007bff;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+}
