--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,31 @@
+
 .titulo {
+    display: flex;
+    margin: auto;
+    width: 80%; 
+    padding: 1rem 0;
     text-align: center;
+    justify-content: center;
     background: #181823;
     color: #eff5f5;
     text-shadow: 1px 1px 1px #fc7300;
+}
+
+.container{
+    display: flex;
+    margin: auto;
+    width: 80%; 
+    padding: 1rem 0;
+    justify-content: center;
+}
+
+nav {
+    display: flex;
+    margin: auto;
+    width: 80%; 
+    padding: 1rem 0;
+    justify-content: center;
+
 }
 /* contenedor 1 de quienes somos */
 .contenedor{
@@ -11,6 +34,8 @@
     margin: auto;
     padding: 2rem 0;
     text-align: center;
+    justify-content: center;
+    height: auto;
 }
 
 .quienes{
@@ -33,8 +58,12 @@
 
 /* seccion de redes */
 .red {
+    width: 100%;
     list-style-type: none;
-    padding: 0;
+    padding: 1rem 0;
+    justify-content: center;
+    align-items: center;
+    height: auto;
 }
 
 .redes {
@@ -44,6 +73,7 @@
     /* Centra verticalmente los elementos dentro del li */
     margin-bottom: 10px;
     /* Espacio entre cada elemento li */
+    
 }
 
 li img {
@@ -63,7 +93,12 @@ li img {
 /* SECCIÓN DE FOOTER */
 footer {
     background-color: #eff5f5;
-    width: 100%;
     /* Las imágenes ocupan el 100% del ancho de sus contenedores */
     height: auto;
+    display: flex;
+    margin: auto;
+    width: 80%; 
+    padding: 1rem 0;
+    align-items: center;
+    justify-content: center;
 }
