--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Poppins', sans-serif;
   margin: 0; /* Elimina los márgenes predeterminados del body */
   display: flex; /* Convierte el body en un contenedor flexible */
   justify-content: center; /* Centra horizontalmente el contenido */
