--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,48 +1,56 @@
 body {
-  font-family: 'Poppins', sans-serif;
-  margin: 0; /* Elimina los márgenes predeterminados del body */
-  display: flex; /* Convierte el body en un contenedor flexible */
-  justify-content: center; /* Centra horizontalmente el contenido */
-  align-items: center; /* Centra verticalmente el contenido */
-  background-color:#181823 ;
-  height: 100vh; /* Establece la altura del body al 100% del viewport para centrar el contenido verticalmente */
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f2f2f2;
 }
 
-.main-block {
-  background: #1f8a70;
-  padding: 60px;
-  width: 400px; /* Establece el ancho del formulario */
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+.container {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 400px;
+}
+
+h2 {
   text-align: center;
 }
 
-.left-part {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
+label {
+  display: block;
+  margin-top: 1rem;
 }
 
-.left-part i {
-  font-size: 30px;
-  margin: 0 10px;
-}
-
-h1 {
-  margin-bottom: 20px;
-}
-
-.info input,
-.info textarea {
-  width: 100%;
-  margin-bottom: 15px;
-  padding: 10px;
-  border: 2px solid #ccc;
+input {
+  width: 90%;
+  padding: 1rem;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
 }
 
 button {
-  background: #007bff;
+  width: 100%;
+  padding: 10px;
+  margin: 1em 0;
+  background-color: #007bff;
   color: #fff;
-  padding: 10px 15px;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+#resultado {
+  margin-top: 20px;
+  text-align: center;
 }
