--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,8 +35,8 @@ input {
   border-radius: 10px;
 }
 
-button {
-  width: 100%;
+input {
+  width: 90%;
   padding: 10px;
   margin: 1em 0;
   background-color: #007bff;
@@ -46,7 +46,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+input:hover {
   background-color: #0056b3;
 }
 
