--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,19 +1,19 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family:'Poppins', sans-serif; ;
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f2f2f2;
+  background-color: #181823;
 }
 
 .container {
-  background-color: #fff;
+  background-color: #f2f2f2;
   padding: 10px;
   border-radius: 30px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 10px #fc7300(0, 0, 0, 0.1);
   width: 90%;
   max-width: 400px;
 }
@@ -31,7 +31,7 @@ input {
   width: 90%;
   padding: 1rem;
   margin-top: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid hsl(0, 0%, 0%);
   border-radius: 10px;
 }
 
@@ -39,15 +39,15 @@ input {
   width: 90%;
   padding: 10px;
   margin: 1em 0;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
+  background-color: #eff5f5;
+  color: #000000;
+  border-color: #000000;
   border-radius: 5px;
   cursor: pointer;
 }
 
 input:hover {
-  background-color: #0056b3;
+  background-color: #d9a9f5;
 }
 
 #resultado {
